--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,7 +6,7 @@ package:
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/execnb-{{ version }}.tar.gz
+  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/execnb-{{ version }}.tar.gz
   sha256: 64f4aea889125679800351d834c50e4f0fb9025f612b1a346503ef9d5b218312
 
 build:
@@ -19,10 +19,10 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.7
+    - python {{ python_min }}
     - setuptools
   run:
-    - python >=3.7
+    - python >={{ python_min }}
     - fastcore >=1.5.5
     - ipython
 
@@ -34,6 +34,7 @@ test:
     - exec_nb --help
   requires:
     - pip
+    - python {{ python_min }}
 
 about:
   home: https://fastai.github.io/execnb/
